Updated app.js with edits to functions to make react-modal-login component work with logging in  and registering, Google sign-in functionality still WIP

--- a/client/src/components/TopLogin/TopLogin.css
+++ b/client/src/components/TopLogin/TopLogin.css
@@ -3,9 +3,10 @@
 }
 
 #loginRow{
+    color: white;
     background-color: black;
 }
 
-#loginLink{
+#loginLink, #signupLink, #logOutLink {
     padding: 0px 16px;
 }
