--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  font-size: 1rem !important;
+  line-height: 1.5 !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
