--- a/client/src/components/PlanCard/PlanCard.css
+++ b/client/src/components/PlanCard/PlanCard.css
@@ -1,3 +1,18 @@
 .card-header{
     background-color: black;
 }
+
+.progress{
+    width: 0%;
+    height: 4px;
+    border-radius: 4px;
+    z-index: 1;
+}
+
+.progress-container{
+    position: relative;
+    top: -6px;
+    left: 2px;
+    width: 99%;
+    height: 4px;
+}
